--- a/styles.css
+++ b/styles.css
@@ -52,3 +52,24 @@ h3 {
     border-radius: 5px;
     margin-top: 20px;
 }
+
+@media(max-width: 768px) {
+    h1 {
+        font-size: 2em;
+    }
+    h3 {
+        font-size: 1em;
+    }
+}
+
+@media(max-width: 425px) {
+    h1 {
+        font-size: 1.2em;
+    }
+    h3 {
+        font-size: 0.7em;
+    }
+    .mensagem {
+        font-size: 1em;
+    }
+}
